@@ -13,19 +13,18 @@ nsn = 31
 upn = 11
 dew = 50000
 dns = 50000
-sigma_file = sigma.data
+#sigma_file = sigma.data
 
 [options]
-temperature = 0
-flow_law = 0
+temperature = 1
+#flow_law = 0
 isostasy = 0
-sliding_law = 4
+#sliding_law = 4
 marine_margin = 2
-stress_calc = 0
+#stress_calc = 0
 evolution = 2
 
 [time]
-tend = 5000.
 dt = 10.
 ntem = 1.
 nvel = 1.
@@ -40,7 +39,7 @@ institution: University of Edinburgh
 references: see EISMINT paper
 
 [output]
-name: simple1.1000a.nc
-frequency: 100
-variables: thk uflx vflx acab artm flwa
+name: simple2.1000a.nc
+frequency: 1000
+variables: thk uflx vflx acab artm flwa temp
 
