@@ -8,31 +8,31 @@ massbalance = 0.5 1.05e-5 450.0e3
 
 [grid]
 ! grid sizes
-ewn = 31
-nsn = 31
+ewn = 151
+nsn = 151
 upn = 11
-dew = 50000
-dns = 50000
-sigma_file = sigma.data
+dew = 10000
+dns = 10000
 
 [options]
-temperature = 0
-flow_law = 0
+temperature = 1 
+#flow_law = 0
 isostasy = 0
-sliding_law = 4
+#sliding_law = 4
 marine_margin = 2
 stress_calc = 0
 evolution = 2
 
 [time]
-tend = 5000.
-dt = 10.
+tstart = 0.
+tend = 20000.
+dt = 5.
 ntem = 1.
 nvel = 1.
 niso = 1.
 
 [parameters]
-flow_factor = 1
+flow_factor = 1.
 
 [default]
 title: EISMINT test case 2
@@ -40,7 +40,9 @@ institution: University of Edinburgh
 references: see EISMINT paper
 
 [output]
-name: simple1.1000a.nc
+name: simple3.1000a.nc
 frequency: 100
-variables: thk uflx vflx acab artm flwa
+variables: thk uflx vflx acab artm flwa temp topg lsurf
 
+[input]
+name: random.nc
